# petrovich-rust

./: .gitignore  .gitmodules  Cargo.toml  README.MD  Readme.md
.github/workflows/: rust.yml
mods/core/: Cargo.toml  README.MD
mods/core/src/: case.rs  gender.rs  lib.rs
mods/core/tests/: first_name_test.rs  middle_name_test.rs
mods/core/tests/common/: mod.rs
mods/gui/: Cargo.toml  build.rs
mods/gui/src/: main.rs
mods/gui/src/custom_button/: imp.rs
mods/gui/src/resources/: resources.gresource.xml  window.ui
mods/gui/src/window/: imp.rs  mod.rs
src/: case.rs  errors.rs  gender.rs  lib.rs  rules.rs
tests/: first_name_test.rs  integration_test.rs  last_name_test.rs
tests/common/: mod.rs
