[package]
name = "petrovich"
version = "0.1.0"
authors = ["devrtc0 <azat.mirzaianov@gmail.com>"]
edition = "2018"

[dependencies]
petrovich_core = { path = "../core" }
gtk = { version = "0.4.8", package = "gtk4", default-features = false}
gio = { version = "0.15", default-features = false }
once_cell = "1.5"

[build-dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
